plugins {
    id 'java'
    id 'application'
    id 'idea'
}

java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

mainClassName = "com.dagger.MainApplication"

repositories {
    mavenLocal()
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    compileOnly('org.projectlombok:lombok:1.18.16')
    annotationProcessor('org.projectlombok:lombok:1.18.16')

    implementation('com.google.dagger:dagger:2.22')
    annotationProcessor 'com.google.dagger:dagger-compiler:2.22'

    // 2.11.3
//    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
//    implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
//    implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")
//    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion")

    // https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api
//    compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'

    testImplementation(platform("org.junit:junit-bom:${junitVersion}"))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testImplementation("org.assertj:assertj-core:${assertjVersion}")
    testImplementation("org.mockito:mockito-core:${mockitoVersion}")
    testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")

}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
